--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "4.2.0",
+    "history": "^4.7.2",
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
@@ -45,8 +46,8 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
-    "cross-env": "5.0.5",
-    "dotenv": "4.0.0",
+    "cross-env": "^5.0.5",
+    "dotenv": "^4.0.0",
     "enzyme": "2.9.1",
     "enzyme-to-json": "1.5.1",
     "jest": "20.0.4",
